[package]
name = "path-finding"
version = "0.6.2"
edition = "2021"
license = "MIT"
authors = ["barblin"]
documentation = "https://github.com/barblin/path-finding-lib-rust/blob/master/README.md"
readme = "README.md"
repository = "https://github.com/barblin/path-finding-lib-rust"
homepage = "https://github.com/barblin"
description = "This library provides a variety of path finding and graph operations. Work in progress."
keywords = ["game",  "path", "path-finding", "mst", "graph"]
categories = ["algorithms", "games", "game-development", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
priority-queue = "1.2.0"
ordered-float = "3.4.0"
